// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Link Blank Target 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <a
      class="sc-eGZQJn bLnTyJ sc-ctiUpC gMbSSC"
      color="primary.main"
      href="https://balena.io"
      rel="noopener"
      target="_blank"
    >
      https://balena.io
    </a>
  </div>
</div>
`;

exports[`Storyshots Core/Link Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <a
      class="sc-eGZQJn bLnTyJ sc-ctiUpC gMbSSC"
      color="primary.main"
      href="#"
    >
      Internal link
    </a>
  </div>
</div>
`;

exports[`Storyshots Core/Link Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <a
      class="sc-eGZQJn bsoUkd sc-ctiUpC gMbSSC"
      color="primary.main"
      disabled=""
    />
  </div>
</div>
`;
